fix small spacing on imac base

--- a/css/imac.css
+++ b/css/imac.css
@@ -61,7 +61,7 @@
 .md-imac .md-base {
   width: 19.25em;
   height: 6.875em;
-  margin: -0.5625em auto;
+  margin: -0.5em auto;
 }
 .md-imac .md-stand {
   width: 13.125em;
