--- a/stylesheets/device/_imac.scss
+++ b/stylesheets/device/_imac.scss
@@ -66,11 +66,11 @@
 			border-radius: 100%;
 		}
 	}
-	
+
 	.md-base {
 		width: pxtoem(308);
 		height: pxtoem(110);
-		margin: pxtoem(-9) auto;		
+		margin: pxtoem(-8) auto;
 	}
 
 	.md-stand {
